--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Spark</title>
   </head>
   <body>
     <h1>Hello world!</h1>
     <h3>App based HTML</h3>
+    <p id="texto"></p>
+    <script type="text/javascript" src="defaultTela.js"></script>
   </body>
 </html>
